src/network_policies/test1default5 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default5
  namespace: default
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          name: default-rome-a2d9d2
      podSelector:
        matchLabels:
          app: product-catalogue
